Fix the bug that program doesn't work on linux